# brain

./: .env.example  README.md  alembic.ini  brain-app.html  brain-ui-mobile.html  pyproject.toml
alembic/versions/: 001_initial_schema.py
brain/: __init__.py  cli.py
brain/api/: __init__.py  app.py  deps.py
brain/api/routes/: __init__.py  approvals.py  artifacts.py  events.py  health.py  missions.py
brain/core/: __init__.py  clock.py  config.py  enums.py  exceptions.py  ids.py  logging.py
brain/db/: __init__.py  base.py  models.py  pragmas.py  session.py
brain/domain/: __init__.py
brain/repositories/: __init__.py  approval_repository.py  artifact_repository.py  event_repository.py  mission_repository.py
brain/runtime/: __init__.py  mission_runtime.py  runtime_registry.py
brain/schemas/: __init__.py  approval.py  artifact.py  common.py  event.py  mission.py
brain/services/: __init__.py  approval_service.py  artifact_service.py  boot_service.py  event_service.py  mission_service.py  recovery_service.py
brain/storage/: __init__.py  artifact_store.py  paths.py
tests/: conftest.py  test_approvals.py  test_artifacts.py  test_boot.py  test_health.py  test_missions_api.py  test_recovery.py
